fix mathjax overflow

--- a/source/css/page_style/page_style.styl
+++ b/source/css/page_style/page_style.styl
@@ -407,5 +407,6 @@ td {
   border-bottom-width: 1px;
 }
 mjx-container {
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
